# musicfy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  deps.py  logging_config.py  main.py
app/api/: errors.py  openapi.py
app/auth/: api_keys.py  apple.py  sessions.py
app/db/: session.py
app/domain/: enums.py
app/middleware/: rate_limit.py  request_context.py  security_headers.py
app/models/: base.py
app/schemas/: common.py
docs/: 100-known-tech-debt.md  99-open-questions.md  ARCHITECTURE.md  DEPLOYMENT.md  billing-coins-redesign.md  openapi.json
docs/adr/: ADR-001-fail-fast-db-password.md  ADR-002-rsync-deploy.md  ADR-003-health-gate-before-prune.md  ADR-004-ci-gating-before-deploy.md  ADR-005-coin-wallet-billing.md  ADR-006-preset-voices-catalog.md  ADR-007-video-three-modes.md  ADR-008-demucs-stems-and-track-metadata.md  ADR-009-cover-cloned-voice-conversion.md  ADR-010-lyrics-sync-billing.md  ADR-011-user-resource-deletion.md  ADR-012-user-resource-rename.md  ADR-013-storekit-dedup-environment-scoping.md  ADR-014-storekit-cn-trust-xcode-flag.md  ADR-015-product-catalog-verbatim-reseed.md  ADR-016-video-generation-params-fix.md  ADR-017-subscription-transfer-on-reinstall.md  INDEX.md
migrations/: env.py
migrations/versions/: 0001_core_identity.py  (+16 more)
scripts/: real_e2e.py
tests/: conftest.py  helpers.py  test_admin.py  test_apns.py  test_auth.py  test_billing.py  test_billing_catalog_reseed.py  test_billing_dedup_api.py  test_billing_dedup_key.py  test_billing_subscription_transfer.py  test_cover.py  test_cover_cloned_voice.py  test_fal_stems.py  test_fal_webhook_error_envelope.py  test_fal_webhook_parse.py  test_fal_webhook_security.py  test_lyrics_billing.py  test_migration_0016_dedup.py  test_moderation_library.py  test_presets_voices.py  test_rename.py  test_settings_storekit_failfast.py  test_soft_delete.py  test_song.py  test_storekit_cn_trust_xcode.py  test_storekit_security.py  test_storekit_trust_anchor.py  test_track_prompt.py  test_track_title.py  test_video.py  test_video_adr016.py  test_video_modes.py  test_voice.py
(+87 files in other folders)
