[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicfy-backend"
version = "0.1.0"
description = "Musicfy backend — orchestration layer over fal.ai for song / cover / voice / video generation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-json-logger>=2.0",
    "orjson>=3.10",
    "anyio>=4.4",
    "python-multipart>=0.0.9",
    "mutagen>=1.47",
    # JWS/JWT для Sign in with Apple, App Store Server API и APNs (ES256/RS256)
    "pyjwt>=2.9",
    "cryptography>=43.0",
    # HTTP/2 для APNs (api.push.apple.com требует HTTP/2)
    "h2>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "asgi-lifespan>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# B008: FastAPI Depends() в дефолтах; UP042: намеренно (str, Enum) для native_enum SQLAlchemy.
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
# ffmpeg-хелпер работает с локальными temp-файлами (мелкие, в TemporaryDirectory);
# probe_duration_seconds намеренно принимает timeout как часть публичного API.
"app/domain/services/audio_mixer.py" = ["ASYNC230", "ASYNC240"]
"app/domain/services/audio_duration.py" = ["ASYNC109"]
# Документация API: длинные строки описаний/примеров в OpenAPI и схемах допустимы.
"app/api/openapi.py" = ["E501"]
"app/domain/schemas/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
